--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint": "~8.9.0",
     "eslint-config-prettier": "~8.3.0",
     "eslint-define-config": "~1.2.4",
+    "eslint-gitignore": "~0.1.0",
     "eslint-plugin-inclusive-language": "~2.2.0",
     "eslint-plugin-jsdoc": "~37.9.1",
     "eslint-plugin-prettier": "~4.0.0",
