--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -8,20 +8,40 @@
   "packageRules": [
     {
       "groupName": "typescript-eslint",
+      "matchDepTypes": ["devDependencies"],
       "matchPackagePrefixes": ["@typescript-eslint/"]
     },
     {
       "groupName": "vitest",
+      "matchDepTypes": ["devDependencies"],
       "matchPackagePrefixes": ["@vitest/ui", "vitest"]
+    },
+    {
+      "groupName": "typescript",
+      "matchDepTypes": ["devDependencies"],
+      "matchPackagePrefixes": ["typescript"]
+    },
+    {
+      "groupName": "prettier",
+      "matchDepTypes": ["devDependencies"],
+      "matchPackagePrefixes": ["prettier", "@types/prettier"]
+    },
+    {
+      "groupName": "dependencies",
+      "matchDepTypes": ["dependencies"],
+      "rangeStrategy": "bump"
+    },
+    {
+      "groupName": "peerDependencies",
+      "matchDepTypes": ["peerDependencies"],
+      "rangeStrategy": "widen"
     }
   ],
   "ignoreDeps": [
     // manually bumping
     "@types/node",
     "node",
-    "npm",
-    "prettier",
-    "typescript"
+    "npm"
   ],
   "vulnerabilityAlerts": {
     "labels": ["security"],
