--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -7,28 +7,8 @@
   "rangeStrategy": "bump",
   "packageRules": [
     {
-      "groupName": "typescript-eslint",
+      "groupName": "devDependencies",
       "matchDepTypes": ["devDependencies"],
-      "matchPackagePrefixes": ["@typescript-eslint/"]
-    },
-    {
-      "groupName": "vitest",
-      "matchDepTypes": ["devDependencies"],
-      "matchPackagePrefixes": ["@vitest/ui", "vitest"]
-    },
-    {
-      "groupName": "typescript",
-      "matchDepTypes": ["devDependencies"],
-      "matchPackagePrefixes": ["typescript"]
-    },
-    {
-      "groupName": "prettier",
-      "matchDepTypes": ["devDependencies"],
-      "matchPackagePrefixes": ["prettier", "@types/prettier"]
-    },
-    {
-      "groupName": "node",
-      "matchPackagePrefixes": ["@types/node", "node", "npm"],
       "rangeStrategy": "bump"
     },
     {
@@ -37,14 +17,30 @@
       "rangeStrategy": "replace"
     },
     {
-      "groupName": "devDependencies",
-      "matchDepTypes": ["devDependencies"],
-      "rangeStrategy": "bump"
-    },
-    {
       "groupName": "peerDependencies",
       "matchDepTypes": ["peerDependencies"],
       "rangeStrategy": "widen"
+    },
+    {
+      "groupName": "engines",
+      "matchDepTypes": ["engines"],
+      "rangeStrategy": "replace"
+    },
+    {
+      "groupName": "typescript-eslint",
+      "matchPackagePrefixes": ["@typescript-eslint/"]
+    },
+    {
+      "groupName": "vitest",
+      "matchPackageNames": ["@vitest/ui", "vitest"]
+    },
+    {
+      "groupName": "prettier",
+      "matchPackageNames": ["@types/prettier", "prettier"]
+    },
+    {
+      "groupName": "typescript",
+      "matchPackageNames": ["typescript"]
     }
   ],
   "vulnerabilityAlerts": {
