--- a/package.json
+++ b/package.json
@@ -28,6 +28,16 @@
     "type": "git",
     "url": "https://github.com/prettier/plugin-pug.git"
   },
+  "funding": [
+    {
+      "type": "github",
+      "url": "https://github.com/Shinigami92"
+    },
+    {
+      "type": "paypal",
+      "url": "https://www.paypal.com/donate/?hosted_button_id=L7GY729FBKTZY"
+    }
+  ],
   "bugs": "https://github.com/prettier/plugin-pug/issues",
   "license": "MIT",
   "files": [
