--- a/package.json
+++ b/package.json
@@ -50,32 +50,41 @@
     "pug-lexer": "^5.0.0"
   },
   "devDependencies": {
-    "@types/node": "~17.0.25",
-    "@types/prettier": "~2.6.0",
-    "@typescript-eslint/eslint-plugin": "~5.20.0",
-    "@typescript-eslint/parser": "~5.20.0",
+    "@types/node": "~17.0.35",
+    "@types/prettier": "~2.6.1",
+    "@typescript-eslint/eslint-plugin": "~5.26.0",
+    "@typescript-eslint/parser": "~5.26.0",
     "benchmark": "~2.1.4",
-    "eslint": "~8.13.0",
+    "eslint": "~8.16.0",
     "eslint-config-prettier": "~8.5.0",
-    "eslint-define-config": "~1.4.0",
+    "eslint-define-config": "~1.4.1",
     "eslint-gitignore": "~0.1.0",
     "eslint-plugin-inclusive-language": "~2.2.0",
-    "eslint-plugin-jsdoc": "~39.2.7",
+    "eslint-plugin-jsdoc": "~39.3.1",
     "eslint-plugin-prettier": "~4.0.0",
     "eslint-plugin-spellcheck": "~0.0.19",
     "prettier": "2.6.2",
     "prettier-plugin-organize-imports": "~2.3.4",
-    "typescript": "~4.6.3",
-    "vite": "~2.9.5",
-    "vitepress": "~0.22.3",
-    "vitest": "~0.9.3"
+    "typescript": "~4.7.2",
+    "vite": "~2.9.9",
+    "vitepress": "~0.22.4",
+    "vitest": "~0.12.9"
   },
   "peerDependencies": {
     "prettier": "^2.3.0"
   },
-  "packageManager": "pnpm@6.32.9",
+  "packageManager": "pnpm@7.1.5",
   "engines": {
     "node": ">=14.6.0",
     "npm": ">=6.0.0"
+  },
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "@types/react",
+        "react",
+        "react-dom"
+      ]
+    }
   }
 }
