--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "prettier-plugin-organize-imports": "~2.3.4",
     "typescript": "~4.7.3",
     "vite": "~2.9.9",
-    "vitepress": "~0.22.4",
+    "vitepress": "1.0.0-alpha.1",
     "vitest": "~0.13.1"
   },
   "peerDependencies": {
