--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
   "devDependencies": {
     "@types/node": "~18.0.0",
     "@types/prettier": "~2.6.3",
-    "@typescript-eslint/eslint-plugin": "~5.29.0",
-    "@typescript-eslint/parser": "~5.29.0",
+    "@typescript-eslint/eslint-plugin": "~5.30.3",
+    "@typescript-eslint/parser": "~5.30.3",
     "benchmark": "~2.1.4",
     "eslint": "~8.18.0",
     "eslint-config-prettier": "~8.5.0",
@@ -61,19 +61,19 @@
     "eslint-gitignore": "~0.1.0",
     "eslint-plugin-inclusive-language": "~2.2.0",
     "eslint-plugin-jsdoc": "~39.3.3",
-    "eslint-plugin-prettier": "~4.0.0",
+    "eslint-plugin-prettier": "~4.2.1",
     "eslint-plugin-spellcheck": "~0.0.19",
     "prettier": "2.7.1",
     "prettier-plugin-organize-imports": "~3.0.0",
     "typescript": "~4.7.4",
-    "vite": "~2.9.12",
+    "vite": "~2.9.13",
     "vitepress": "1.0.0-alpha.4",
-    "vitest": "~0.15.2"
+    "vitest": "~0.16.0"
   },
   "peerDependencies": {
     "prettier": "^2.3.0"
   },
-  "packageManager": "pnpm@7.3.0",
+  "packageManager": "pnpm@7.4.1",
   "engines": {
     "node": ">=14.6.0",
     "npm": ">=6.0.0"
@@ -81,6 +81,7 @@
   "pnpm": {
     "peerDependencyRules": {
       "ignoreMissing": [
+        "@algolia/client-search",
         "@types/react",
         "react",
         "react-dom"
