--- a/package.json
+++ b/package.json
@@ -50,30 +50,31 @@
     "pug-lexer": "^5.0.0"
   },
   "devDependencies": {
-    "@types/node": "~18.6.2",
-    "@types/prettier": "~2.6.4",
-    "@typescript-eslint/eslint-plugin": "~5.31.0",
-    "@typescript-eslint/parser": "~5.31.0",
+    "@types/node": "~18.7.6",
+    "@types/prettier": "~2.7.0",
+    "@typescript-eslint/eslint-plugin": "~5.33.1",
+    "@typescript-eslint/parser": "~5.33.1",
+    "@vitest/coverage-c8": "~0.22.0",
     "benchmark": "~2.1.4",
-    "eslint": "~8.20.0",
+    "eslint": "~8.22.0",
     "eslint-config-prettier": "~8.5.0",
-    "eslint-define-config": "~1.5.1",
+    "eslint-define-config": "~1.6.0",
     "eslint-gitignore": "~0.1.0",
     "eslint-plugin-inclusive-language": "~2.2.0",
-    "eslint-plugin-jsdoc": "~39.3.4",
+    "eslint-plugin-jsdoc": "~39.3.6",
     "eslint-plugin-prettier": "~4.2.1",
     "eslint-plugin-spellcheck": "~0.0.19",
     "prettier": "2.7.1",
-    "prettier-plugin-organize-imports": "~3.0.0",
+    "prettier-plugin-organize-imports": "~3.1.0",
     "typescript": "~4.7.4",
-    "vite": "~3.0.4",
+    "vite": "~3.0.8",
     "vitepress": "1.0.0-alpha.4",
-    "vitest": "~0.19.1"
+    "vitest": "~0.22.0"
   },
   "peerDependencies": {
     "prettier": "^2.3.0"
   },
-  "packageManager": "pnpm@7.7.0",
+  "packageManager": "pnpm@7.9.3",
   "engines": {
     "node": ">=14.6.0",
     "npm": ">=6.0.0"
