--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "eslint-plugin-jsdoc": "~39.3.6",
     "eslint-plugin-prettier": "~4.2.1",
     "eslint-plugin-spellcheck": "~0.0.19",
-    "prettier": "2.7.1",
+    "prettier": "3.0.0-alpha.0",
     "prettier-plugin-organize-imports": "~3.1.0",
     "typescript": "~4.7.4",
     "vite": "~3.0.8",
