--- a/package.json
+++ b/package.json
@@ -50,34 +50,34 @@
     "pug-lexer": "^5.0.0"
   },
   "devDependencies": {
-    "@types/node": "~18.11.4",
+    "@types/node": "~18.11.7",
     "@types/prettier": "~2.7.1",
-    "@typescript-eslint/eslint-plugin": "~5.40.1",
-    "@typescript-eslint/parser": "~5.40.1",
+    "@typescript-eslint/eslint-plugin": "~5.41.0",
+    "@typescript-eslint/parser": "~5.41.0",
     "@vitest/coverage-c8": "~0.24.3",
     "benchmark": "~2.1.4",
     "eslint": "~8.26.0",
     "eslint-config-prettier": "~8.5.0",
-    "eslint-define-config": "~1.8.0",
+    "eslint-define-config": "~1.9.0",
     "eslint-gitignore": "~0.1.0",
     "eslint-plugin-inclusive-language": "~2.2.0",
-    "eslint-plugin-jsdoc": "~39.3.24",
+    "eslint-plugin-jsdoc": "~39.3.25",
     "eslint-plugin-prettier": "~4.2.1",
     "eslint-plugin-spellcheck": "~0.0.19",
     "prettier": "2.7.1",
     "prettier-plugin-organize-imports": "~3.1.1",
     "typescript": "~4.8.4",
-    "vite": "~3.1.8",
-    "vitepress": "1.0.0-alpha.22",
+    "vite": "~3.2.1",
+    "vitepress": "1.0.0-alpha.26",
     "vitest": "~0.24.3"
   },
   "peerDependencies": {
     "prettier": "^2.3.0"
   },
-  "packageManager": "pnpm@7.14.0",
+  "packageManager": "pnpm@7.14.1",
   "engines": {
-    "node": ">=14.6.0",
-    "npm": ">=6.0.0"
+    "node": "^14.17.0 || ^16.13.0 || >=18.0.0",
+    "npm": ">=6.14.13"
   },
   "pnpm": {
     "peerDependencyRules": {
