Adjust script flow to @faker-js/faker

--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "description": "Prettier Pug Plugin",
   "main": "dist/index.js",
   "scripts": {
-    "clean": "rm -Rf coverage dist junit.xml pnpm-lock.yaml node_modules",
-    "build": "tsc --project ./tsconfig.build.json",
-    "docs:dev": "vitepress dev docs",
+    "clean": "rimraf coverage .eslintcache dist junit.xml docs/.vitepress/dist pnpm-lock.yaml node_modules",
+    "build:clean": "rimraf dist",
+    "build:code": "tsc --project tsconfig.build.json",
+    "build": "run-s build:clean build:code",
     "docs:build": "vitepress build docs",
-    "format": "prettier --write .",
-    "lint": "eslint .",
+    "docs:dev": "vitepress dev docs",
+    "docs:serve": "vitepress serve docs --port 5173",
+    "format": "prettier --cache --write .",
+    "lint": "eslint --cache --cache-strategy content --report-unused-disable-directives .",
+    "ts-check": "tsc",
     "test": "vitest",
-    "prepublishOnly": "pnpm run clean && pnpm install && pnpm run build"
+    "coverage": "vitest run --coverage",
+    "prepublishOnly": "pnpm run clean && pnpm install && pnpm run build",
+    "preflight": "pnpm install && run-s format lint build test ts-check"
   },
   "keywords": [
     "pug",
@@ -64,8 +70,10 @@
     "eslint-plugin-jsdoc": "~43.1.1",
     "eslint-plugin-prettier": "~4.2.1",
     "eslint-plugin-spellcheck": "~0.0.20",
+    "npm-run-all": "~4.1.5",
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "~3.2.2",
+    "rimraf": "~5.0.0",
     "typescript": "~5.0.4",
     "vite": "~4.3.4",
     "vitepress": "1.0.0-alpha.75",
