--- a/package.json
+++ b/package.json
@@ -56,33 +56,33 @@
     "pug-lexer": "^5.0.1"
   },
   "devDependencies": {
-    "@types/node": "~20.0.0",
-    "@types/prettier": "~2.7.2",
-    "@typescript-eslint/eslint-plugin": "~5.59.2",
-    "@typescript-eslint/parser": "~5.59.2",
-    "@vitest/coverage-c8": "~0.31.0",
+    "@types/node": "~20.2.5",
+    "@types/prettier": "~2.7.3",
+    "@typescript-eslint/eslint-plugin": "~5.59.8",
+    "@typescript-eslint/parser": "~5.59.8",
+    "@vitest/coverage-c8": "~0.31.4",
     "benchmark": "~2.1.4",
-    "eslint": "~8.39.0",
+    "eslint": "~8.41.0",
     "eslint-config-prettier": "~8.8.0",
     "eslint-define-config": "~1.20.0",
     "eslint-gitignore": "~0.1.0",
     "eslint-plugin-inclusive-language": "~2.2.0",
-    "eslint-plugin-jsdoc": "~43.2.0",
+    "eslint-plugin-jsdoc": "~46.2.0",
     "eslint-plugin-prettier": "~4.2.1",
     "eslint-plugin-spellcheck": "~0.0.20",
     "npm-run-all": "~4.1.5",
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "~3.2.2",
-    "rimraf": "~5.0.0",
-    "typescript": "~5.0.4",
-    "vite": "~4.3.5",
-    "vitepress": "1.0.0-alpha.75",
-    "vitest": "~0.31.0"
+    "rimraf": "~5.0.1",
+    "typescript": "~5.1.3",
+    "vite": "~4.3.9",
+    "vitepress": "1.0.0-beta.1",
+    "vitest": "~0.31.4"
   },
   "peerDependencies": {
     "prettier": "^2.3.0"
   },
-  "packageManager": "pnpm@8.4.0",
+  "packageManager": "pnpm@8.6.0",
   "engines": {
     "node": "^16.13.0 || >=18.0.0",
     "npm": ">=7.10.0"
