--- a/package.json
+++ b/package.json
@@ -56,28 +56,28 @@
     "pug-lexer": "^5.0.1"
   },
   "devDependencies": {
-    "@types/node": "~20.2.5",
+    "@types/node": "~20.4.4",
     "@types/prettier": "~2.7.3",
-    "@typescript-eslint/eslint-plugin": "~5.59.8",
-    "@typescript-eslint/parser": "~5.59.8",
-    "@vitest/coverage-c8": "~0.31.4",
+    "@typescript-eslint/eslint-plugin": "~6.1.0",
+    "@typescript-eslint/parser": "~6.1.0",
+    "@vitest/coverage-v8": "~0.33.0",
     "benchmark": "~2.1.4",
-    "eslint": "~8.41.0",
+    "eslint": "~8.45.0",
     "eslint-config-prettier": "~8.8.0",
-    "eslint-define-config": "~1.20.0",
+    "eslint-define-config": "~1.21.0",
     "eslint-gitignore": "~0.1.0",
     "eslint-plugin-inclusive-language": "~2.2.0",
-    "eslint-plugin-jsdoc": "~46.2.0",
+    "eslint-plugin-jsdoc": "~46.4.4",
     "eslint-plugin-prettier": "~4.2.1",
     "eslint-plugin-spellcheck": "~0.0.20",
     "npm-run-all": "~4.1.5",
     "prettier": "2.8.8",
-    "prettier-plugin-organize-imports": "~3.2.2",
+    "prettier-plugin-organize-imports": "~3.2.3",
     "rimraf": "~5.0.1",
-    "typescript": "~5.1.3",
-    "vite": "~4.3.9",
-    "vitepress": "1.0.0-beta.1",
-    "vitest": "~0.31.4"
+    "typescript": "~5.1.6",
+    "vite": "~4.4.6",
+    "vitepress": "1.0.0-beta.6",
+    "vitest": "~0.33.0"
   },
   "peerDependencies": {
     "prettier": "^2.3.0"
