--- a/package.json
+++ b/package.json
@@ -69,36 +69,36 @@
     "pug-lexer": "^5.0.1"
   },
   "devDependencies": {
-    "@types/node": "~20.4.5",
-    "@typescript-eslint/eslint-plugin": "~6.2.0",
-    "@typescript-eslint/parser": "~6.2.0",
-    "@vitest/coverage-v8": "~0.33.0",
+    "@types/node": "~20.6.3",
+    "@typescript-eslint/eslint-plugin": "~6.7.2",
+    "@typescript-eslint/parser": "~6.7.2",
+    "@vitest/coverage-v8": "~0.34.4",
     "benchmark": "~2.1.4",
-    "eslint": "~8.45.0",
-    "eslint-config-prettier": "~8.8.0",
-    "eslint-define-config": "~1.21.0",
+    "eslint": "~8.49.0",
+    "eslint-config-prettier": "~9.0.0",
+    "eslint-define-config": "~1.23.0",
     "eslint-gitignore": "~0.1.0",
     "eslint-plugin-inclusive-language": "~2.2.0",
-    "eslint-plugin-jsdoc": "~46.4.4",
+    "eslint-plugin-jsdoc": "~46.8.1",
     "eslint-plugin-prettier": "~5.0.0",
     "eslint-plugin-spellcheck": "~0.0.20",
     "npm-run-all": "~4.1.5",
-    "prettier": "3.0.0",
+    "prettier": "3.0.3",
     "prettier-plugin-organize-imports": "~3.2.3",
     "rimraf": "~5.0.1",
-    "tsup": "~7.1.0",
-    "typescript": "~5.1.6",
-    "vite": "~4.4.7",
-    "vitepress": "1.0.0-beta.6",
-    "vitest": "~0.33.0"
+    "tsup": "~7.2.0",
+    "typescript": "~5.2.2",
+    "vite": "~4.4.9",
+    "vitepress": "1.0.0-rc.14",
+    "vitest": "~0.34.4"
   },
   "peerDependencies": {
     "prettier": "^3.0.0"
   },
-  "packageManager": "pnpm@8.6.10",
+  "packageManager": "pnpm@8.7.6",
   "engines": {
     "node": "^16.13.0 || >=18.0.0",
-    "npm": ">=7.10.0"
+    "npm": ">=8.0.0"
   },
   "pnpm": {
     "peerDependencyRules": {
