--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "eslint-plugin-jsdoc": "~46.8.1",
     "eslint-plugin-prettier": "~5.0.0",
     "eslint-plugin-spellcheck": "~0.0.20",
+    "eslint-plugin-unicorn": "~48.0.1",
     "npm-run-all": "~4.1.5",
     "prettier": "3.0.3",
     "prettier-plugin-organize-imports": "~3.2.3",
