--- a/package.json
+++ b/package.json
@@ -69,17 +69,17 @@
     "pug-lexer": "^5.0.1"
   },
   "devDependencies": {
-    "@types/node": "~20.6.3",
+    "@types/node": "~20.6.4",
     "@typescript-eslint/eslint-plugin": "~6.7.2",
     "@typescript-eslint/parser": "~6.7.2",
-    "@vitest/coverage-v8": "~0.34.4",
+    "@vitest/coverage-v8": "~0.34.5",
     "benchmark": "~2.1.4",
-    "eslint": "~8.49.0",
+    "eslint": "~8.50.0",
     "eslint-config-prettier": "~9.0.0",
     "eslint-define-config": "~1.23.0",
     "eslint-gitignore": "~0.1.0",
-    "eslint-plugin-inclusive-language": "~2.2.0",
-    "eslint-plugin-jsdoc": "~46.8.1",
+    "eslint-plugin-inclusive-language": "~2.2.1",
+    "eslint-plugin-jsdoc": "~46.8.2",
     "eslint-plugin-prettier": "~5.0.0",
     "eslint-plugin-spellcheck": "~0.0.20",
     "eslint-plugin-unicorn": "~48.0.1",
@@ -90,16 +90,16 @@
     "tsup": "~7.2.0",
     "typescript": "~5.2.2",
     "vite": "~4.4.9",
-    "vitepress": "1.0.0-rc.14",
-    "vitest": "~0.34.4"
+    "vitepress": "1.0.0-rc.17",
+    "vitest": "~0.34.5"
   },
   "peerDependencies": {
     "prettier": "^3.0.0"
   },
   "packageManager": "pnpm@8.7.6",
   "engines": {
-    "node": "^16.13.0 || >=18.0.0",
-    "npm": ">=8.0.0"
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   },
   "pnpm": {
     "peerDependencyRules": {
