--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,8 +1,16 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:base", "schedule:nonOfficeHours", "group:allNonMajor"],
+  "extends": [
+    "config:best-practices",
+    "schedule:nonOfficeHours",
+    "group:allNonMajor",
+    ":prHourlyLimitNone"
+  ],
   "timezone": "Europe/Berlin",
   "labels": ["dependencies"],
+  "lockFileMaintenance": {
+    "enabled": true
+  },
   "reviewersFromCodeOwners": true,
   "rangeStrategy": "bump",
   "packageRules": [
@@ -27,12 +35,16 @@
       "rangeStrategy": "replace"
     },
     {
-      "groupName": "typescript-eslint",
-      "matchPackagePrefixes": ["@typescript-eslint/"]
+      "groupName": "eslint",
+      "matchPackagePrefixes": [
+        "@typescript-eslint/",
+        "@eslint-types/",
+        "eslint"
+      ]
     },
     {
       "groupName": "vitest",
-      "matchPackageNames": ["@vitest/coverage-v8", "@vitest/ui", "vitest"]
+      "matchPackagePrefixes": ["@vitest/", "vitest"]
     },
     {
       "groupName": "prettier",
@@ -41,6 +53,10 @@
     {
       "groupName": "typescript",
       "matchPackageNames": ["typescript"]
+    },
+    {
+      "groupName": "doc-dependencies",
+      "matchPackageNames": ["@algolia/client-search", "vitepress"]
     }
   ],
   "vulnerabilityAlerts": {
