--- a/package.json
+++ b/package.json
@@ -69,34 +69,38 @@
     "pug-lexer": "^5.0.1"
   },
   "devDependencies": {
-    "@types/node": "~20.6.4",
-    "@typescript-eslint/eslint-plugin": "~6.7.2",
-    "@typescript-eslint/parser": "~6.7.2",
-    "@vitest/coverage-v8": "~0.34.5",
+    "@eslint-types/jsdoc": "~48.2.2",
+    "@eslint-types/prettier": "~5.1.3",
+    "@eslint-types/typescript-eslint": "~7.5.0",
+    "@eslint-types/unicorn": "~52.0.0",
+    "@types/node": "~20.12.7",
+    "@typescript-eslint/eslint-plugin": "~7.7.0",
+    "@typescript-eslint/parser": "~7.7.0",
+    "@vitest/coverage-v8": "~1.5.0",
     "benchmark": "~2.1.4",
-    "eslint": "~8.50.0",
-    "eslint-config-prettier": "~9.0.0",
-    "eslint-define-config": "~1.23.0",
+    "eslint": "~8.57.0",
+    "eslint-config-prettier": "~9.1.0",
+    "eslint-define-config": "~2.1.0",
     "eslint-gitignore": "~0.1.0",
     "eslint-plugin-inclusive-language": "~2.2.1",
-    "eslint-plugin-jsdoc": "~46.8.2",
-    "eslint-plugin-prettier": "~5.0.0",
+    "eslint-plugin-jsdoc": "~48.2.3",
+    "eslint-plugin-prettier": "~5.1.3",
     "eslint-plugin-spellcheck": "~0.0.20",
-    "eslint-plugin-unicorn": "~48.0.1",
+    "eslint-plugin-unicorn": "~52.0.0",
     "npm-run-all": "~4.1.5",
-    "prettier": "3.0.3",
-    "prettier-plugin-organize-imports": "~3.2.3",
-    "rimraf": "~5.0.1",
-    "tsup": "~7.2.0",
-    "typescript": "~5.2.2",
-    "vite": "~4.4.9",
-    "vitepress": "1.0.0-rc.17",
-    "vitest": "~0.34.5"
+    "prettier": "3.2.5",
+    "prettier-plugin-organize-imports": "~3.2.4",
+    "rimraf": "~5.0.5",
+    "tsup": "~8.0.2",
+    "typescript": "~5.4.5",
+    "vite": "~5.2.10",
+    "vitepress": "~1.1.3",
+    "vitest": "~1.5.0"
   },
   "peerDependencies": {
     "prettier": "^3.0.0"
   },
-  "packageManager": "pnpm@8.7.6",
+  "packageManager": "pnpm@9.0.5",
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=9.0.0"
