--- a/package.json
+++ b/package.json
@@ -69,33 +69,33 @@
     "pug-lexer": "^5.0.1"
   },
   "devDependencies": {
-    "@eslint-types/jsdoc": "~48.2.2",
-    "@eslint-types/prettier": "~5.1.3",
-    "@eslint-types/typescript-eslint": "~7.5.0",
-    "@eslint-types/unicorn": "~52.0.0",
-    "@types/node": "~20.16.5",
-    "@typescript-eslint/eslint-plugin": "~7.18.0",
-    "@typescript-eslint/parser": "~7.18.0",
-    "@vitest/coverage-v8": "~2.0.5",
-    "benchmark": "~2.1.4",
-    "eslint": "~8.57.0",
-    "eslint-config-prettier": "~9.1.0",
-    "eslint-define-config": "~2.1.0",
-    "eslint-gitignore": "~0.1.0",
-    "eslint-plugin-inclusive-language": "~2.2.1",
-    "eslint-plugin-jsdoc": "~50.2.2",
-    "eslint-plugin-prettier": "~5.2.1",
-    "eslint-plugin-spellcheck": "~0.0.20",
-    "eslint-plugin-unicorn": "~55.0.0",
-    "npm-run-all2": "~6.2.2",
+    "@eslint-types/jsdoc": "48.2.2",
+    "@eslint-types/prettier": "5.1.3",
+    "@eslint-types/typescript-eslint": "7.5.0",
+    "@eslint-types/unicorn": "52.0.0",
+    "@types/node": "20.16.5",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/parser": "7.18.0",
+    "@vitest/coverage-v8": "2.0.5",
+    "benchmark": "2.1.4",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-define-config": "2.1.0",
+    "eslint-gitignore": "0.1.0",
+    "eslint-plugin-inclusive-language": "2.2.1",
+    "eslint-plugin-jsdoc": "50.2.2",
+    "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-spellcheck": "0.0.20",
+    "eslint-plugin-unicorn": "55.0.0",
+    "npm-run-all2": "6.2.2",
     "prettier": "3.3.3",
-    "prettier-plugin-organize-imports": "~4.0.0",
-    "rimraf": "~6.0.1",
-    "tsup": "~8.2.4",
-    "typescript": "~5.5.4",
-    "vite": "~5.4.3",
-    "vitepress": "~1.3.4",
-    "vitest": "~2.0.5"
+    "prettier-plugin-organize-imports": "4.0.0",
+    "rimraf": "6.0.1",
+    "tsup": "8.2.4",
+    "typescript": "5.5.4",
+    "vite": "5.4.3",
+    "vitepress": "1.3.4",
+    "vitest": "2.0.5"
   },
   "peerDependencies": {
     "prettier": "^3.0.0"
