--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ on:
       - main
   pull_request:
 
+permissions:
+  contents: read # to fetch code (actions/checkout)
+
 jobs:
   build-and-test:
     runs-on: ${{ matrix.os }}
@@ -14,6 +17,7 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         node_version: [20, 22]
       fail-fast: false
+    timeout-minutes: 10
 
     name: 'Build&Test: node-${{ matrix.node_version }}, ${{ matrix.os }}'
     steps:
@@ -54,6 +58,7 @@ jobs:
 
   lint:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     name: 'Lint: node-20, ubuntu-latest'
     steps:
       - name: Checkout
@@ -81,6 +86,7 @@ jobs:
 
   audit:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     name: 'Audit: node-20, ubuntu-latest'
     steps:
       - name: Checkout
