--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,9 @@
     "vuepress",
     "yaml"
   ],
+  "eslint.options": {
+    "flags": ["unstable_ts_config"]
+  },
   "eslint.validate": ["javascript", "typescript"],
   "files.associations": {
     "*.json5": "jsonc"
