--- a/package.json
+++ b/package.json
@@ -11,26 +11,12 @@
     "docs:dev": "vitepress dev docs",
     "docs:serve": "vitepress serve docs --port 5173",
     "format": "prettier --cache --write .",
-    "lint": "eslint --cache --cache-strategy content --report-unused-disable-directives .",
+    "lint": "eslint --cache --cache-strategy content --flag unstable_ts_config .",
     "ts-check": "tsc",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
     "prepublishOnly": "pnpm run clean && pnpm install && pnpm run build",
     "preflight": "pnpm install && run-s format lint build test ts-check"
-  },
-  "type": "module",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "default": "./dist/index.js"
-    },
-    "./src/*": {
-      "types": "./src/*.d.ts",
-      "default": "./src/*.ts"
-    },
-    "./package.json": "./package.json"
   },
   "keywords": [
     "pug",
@@ -38,11 +24,7 @@
     "prettier",
     "formatter"
   ],
-  "author": {
-    "name": "Christopher Quadflieg",
-    "email": "chrissi92@hotmail.de",
-    "url": "https://github.com/Shinigami92"
-  },
+  "bugs": "https://github.com/prettier/plugin-pug/issues",
   "repository": {
     "type": "git",
     "url": "https://github.com/prettier/plugin-pug.git"
@@ -57,8 +39,22 @@
       "url": "https://www.paypal.com/donate/?hosted_button_id=L7GY729FBKTZY"
     }
   ],
-  "bugs": "https://github.com/prettier/plugin-pug/issues",
   "license": "MIT",
+  "author": {
+    "name": "Christopher Quadflieg",
+    "email": "chrissi92@hotmail.de",
+    "url": "https://github.com/Shinigami92"
+  },
+  "type": "module",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "./package.json": "./package.json"
+  },
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "files": [
     "dist",
     "src",
@@ -69,16 +65,15 @@
     "pug-lexer": "^5.0.1"
   },
   "devDependencies": {
-    "@eslint-types/jsdoc": "48.2.2",
-    "@eslint-types/prettier": "5.1.3",
-    "@eslint-types/typescript-eslint": "7.5.0",
-    "@eslint-types/unicorn": "52.0.0",
+    "@eslint/compat": "1.2.0",
+    "@eslint/js": "9.12.0",
+    "@stylistic/eslint-plugin": "2.9.0",
+    "@types/eslint__js": "8.42.3",
     "@types/node": "20.16.11",
-    "@typescript-eslint/eslint-plugin": "7.18.0",
-    "@typescript-eslint/parser": "7.18.0",
     "@vitest/coverage-v8": "2.1.2",
+    "@vitest/eslint-plugin": "1.1.7",
     "benchmark": "2.1.4",
-    "eslint": "8.57.1",
+    "eslint": "9.12.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-define-config": "2.1.0",
     "eslint-gitignore": "0.1.0",
@@ -86,14 +81,17 @@
     "eslint-plugin-jsdoc": "50.3.1",
     "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-spellcheck": "0.0.20",
-    "eslint-plugin-unicorn": "55.0.0",
+    "eslint-plugin-unicorn": "56.0.0",
+    "jiti": "2.3.3",
     "npm-run-all2": "6.2.3",
     "prettier": "3.3.3",
     "prettier-plugin-organize-imports": "4.1.0",
+    "prettier-plugin-packagejson": "2.5.3",
     "rimraf": "6.0.1",
     "tsup": "8.3.0",
     "typescript": "5.6.3",
-    "vite": "5.4.6",
+    "typescript-eslint": "8.8.1",
+    "vite": "5.4.8",
     "vitepress": "1.4.0",
     "vitest": "2.1.2"
   },
@@ -104,15 +102,5 @@
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=9.0.0"
-  },
-  "pnpm": {
-    "peerDependencyRules": {
-      "ignoreMissing": [
-        "@algolia/client-search",
-        "@types/react",
-        "react",
-        "react-dom"
-      ]
-    }
   }
 }
