--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        node_version: [20, 22]
+        node_version: [20, 22, 24]
       fail-fast: false
     timeout-minutes: 10
 
