--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "3.4.0",
   "description": "Prettier Pug Plugin",
   "scripts": {
-    "clean": "rimraf coverage .eslintcache dist junit.xml docs/.vitepress/dist pnpm-lock.yaml node_modules",
-    "build:clean": "rimraf dist",
+    "clean": "git clean -fdx",
+    "build:clean": "git clean -fdx dist",
     "build:code": "tsup-node",
     "build": "run-s build:clean build:code",
     "docs:build": "vitepress build docs",
@@ -84,9 +84,8 @@
     "npm-run-all2": "8.0.4",
     "prettier": "3.6.2",
     "prettier-plugin-organize-imports": "4.2.0",
-    "prettier-plugin-packagejson": "2.5.19",
-    "rimraf": "6.0.1",
-    "tsup": "8.5.0",
+    "prettier-plugin-pkg": "0.21.2",
+    "tsup": "8.4.0",
     "typescript": "5.9.2",
     "typescript-eslint": "8.31.1",
     "vite": "7.1.1",
