chore: ensure skipLibCheck is enabled in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "esModuleInterop": true,
     "declaration": true,
     "stripInternal": true,
+    "skipLibCheck": true,
     "verbatimModuleSyntax": true,
     "noImplicitOverride": true,
     "noUncheckedIndexedAccess": true,
